# formal-prot

./: Channels.v  CpdtTactics.vo  Dist.v  Makefile  README.txt  SetLems.v  old.tex  pa.v
coq/: Channels.v  Dist.v  FcfLems.v  PIOA.v  PIOARel.v  SetLems.v  coalg.v
hask/: hask.cabal  stack.yaml
hask/src/: Common.hs  Core.hs  Main.hs  Sessioned.hs
lang/: lang.tex
wr/: main.tex
