name:                hask
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hask#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hask
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Core, Common, Sessioned
  build-depends:       base >= 4.7 && < 5,
                       probability,
                       containers,
                       sbv,
                       parameterized-utils
                       

  default-extensions: GADTs, DataKinds, TypeOperators, PolyKinds, ExistentialQuantification

